# crawlerino

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  test_run.py  view_results.py
.github/workflows/: ci.yml
crawlerino/: __init__.py  agent.py  config.py  downloader.py  models.py  queue_manager.py
tests/: __init__.py  test_agent.py  test_downloader.py  test_parser.py  test_queue.py  test_storage.py
